# sentvols

./: .gitignore  README.md  projet.md  pyproject.toml  readme.md
notebooks/: annotator.ipynb  sentivols.ipynb  sentivols_fnspid_daily.ipynb
rapports/: rapport.tex
sentvols/: __init__.py
sentvols/core/: __init__.py  annotators.py  explainers.py  exports.py  features.py  models.py  normalizers.py  plots.py  portfolio.py  utils.py
sentvols/explainers/: __init__.py
sentvols/features/: __init__.py
sentvols/models/: __init__.py
sentvols/plots/: __init__.py
sentvols/portfolio/: __init__.py
sentvols/utils/: __init__.py
tests/: test_annotators.py  test_explainers.py  test_features.py  test_models.py  test_normalizers.py  test_plots.py  test_utils.py
