[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentvols"
version = "0.1.0"
description = "Financial sentiment annotation pipeline with VADER+LM lexicon and LLM backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "vaderSentiment>=3.3.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "yfinance>=1.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch",
    "accelerate>=0.27",
    "sentencepiece",
    "bitsandbytes",
]
llama = ["llama-cpp-python"]
ollama = ["ollama"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentvols*"]
